data/derived/fa15/progs/unify/prog3066.ml.out
Characters 31-32:
  let rec clone x n = x List.map x n;;
                                 ^
Error: This expression has type
         (('a -> 'b) -> 'a list -> 'b list) -> 'c -> 'd -> 'e
       but an expression was expected of type 'c
       The type variable 'c occurs inside
       (('a -> 'b) -> 'a list -> 'b list) -> 'c -> 'd -> 'e
